--- a/LibraryHub.API/LibraryHub.API.csproj
+++ b/LibraryHub.API/LibraryHub.API.csproj
@@ -7,12 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Library.Contracts\Library.Contracts.csproj" />
     <ProjectReference Include="..\LibraryHub.Core\LibraryHub.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Exception\" />
   </ItemGroup>
 
 </Project>
